[gd_scene load_steps=10 format=3 uid="uid://351uurynkbr3"]

[ext_resource type="Texture2D" uid="uid://cinmnyx6aw8l8" path="res://images/french.png" id="1_au42r"]
[ext_resource type="Script" path="res://LangageSelection.gd" id="1_daf6i"]
[ext_resource type="Texture2D" uid="uid://dgd4my5t6woiy" path="res://images/french_p.png" id="2_7m41j"]
[ext_resource type="Texture2D" uid="uid://ql0wg4wxs4t2" path="res://images/english.png" id="2_xxljq"]
[ext_resource type="Texture2D" uid="uid://caphke3e1a1ub" path="res://images/japanese.png" id="3_j2o04"]
[ext_resource type="Texture2D" uid="uid://c8hnglt6opl7y" path="res://images/japanese_p.png" id="5_0hoew"]
[ext_resource type="Texture2D" uid="uid://cdohtthq67y6y" path="res://images/english_p.png" id="7_wyig0"]
[ext_resource type="Texture2D" uid="uid://ou7kuekrac4x" path="res://images/japanese_village.webp" id="8_5tnj8"]

[sub_resource type="LabelSettings" id="LabelSettings_fbr15"]
font_size = 60
font_color = Color(0, 0, 0, 1)

[node name="LangageSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_daf6i")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 179
columns = 3

[node name="ButtonEn" type="TextureButton" parent="CenterContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("2_xxljq")
texture_pressed = ExtResource("7_wyig0")

[node name="ButtonFr" type="TextureButton" parent="CenterContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_au42r")
texture_pressed = ExtResource("2_7m41j")

[node name="ButtonJp" type="TextureButton" parent="CenterContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3_j2o04")
texture_pressed = ExtResource("5_0hoew")

[node name="background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(576, 324)
scale = Vector2(0.642857, 0.632812)
texture = ExtResource("8_5tnj8")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.031
anchor_top = 0.034
anchor_right = 0.031
anchor_bottom = 0.034
offset_left = 152.288
offset_top = 4.968
offset_right = 742.288
offset_bottom = 162.968
text = "Ankeyboard"
label_settings = SubResource("LabelSettings_fbr15")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CenterContainer/GridContainer/ButtonEn" to="." method="_on_button_en_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/ButtonFr" to="." method="_on_button_fr_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/ButtonJp" to="." method="_on_button_jp_pressed"]
